retrieveUnpackaged/objects/Equipment__c.object
<CustomObject>
    <fields>
        <fullName>Activated__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Equipment / JEST-STAT / JEST-INACT / Flag for Status ‘Activated’ set</description>
        <label>Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AtCustomer__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Equipment / JEST-STAT / JEST-INACT / Flag for Status ‘At Customer site’ set</description>
        <label>At Customer Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BatchNumber__c</fullName>
        <description>VBAP-CHARG / LIPS-CHARG /</description>
        <label>Batch Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Equipment / JEST-STAT / JEST-INACT / Flag for Status ‘Blocked’ in combination with ‘batch in restricted use stock’</description>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EquipmentNumber__c</fullName>
        <description>Equipment / EQUI-EQUNR / SAP Equipment number</description>
        <externalId>true</externalId>
        <label>Equipment Number</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <description>Equipment / MCH1-VFDAT / Shelf life expiration date</description>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MaterialDesc__c</fullName>
        <description>/</description>
        <formula>Material__r.MaterialDesc__c</formula>
        <label>Material Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <description>/</description>
        <label>Model Number</label>
        <referenceTo>Material__c</referenceTo>
        <relationshipLabel>Equipments</relationshipLabel>
        <relationshipName>Equipments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SapMaterialNumber__c</fullName>
        <description>Equipment / EQUI-MATNR / Optional technical field. Not shown in the UI</description>
        <formula>Material__r.MaterialNumber__c</formula>
        <label>SAP Material Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <description>Equipment / EQUI-SERNR /</description>
        <label>Serial Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Equipment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Material__c</columns>
        <columns>AtCustomer__c</columns>
        <columns>ExpiryDate__c</columns>
        <columns>Activated__c</columns>
        <columns>Blocked__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Equipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>